--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-app",
+  "homepage": "https://amitlpu-840.github.io/todo-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
